--- a/sources/stylesheets/components/_navigation-menus.scss
+++ b/sources/stylesheets/components/_navigation-menus.scss
@@ -19,11 +19,9 @@
 .toggle-sub-menu {
   @extend %button;
   position: absolute;
-  top: 12px;
-  left: -25px;
+  top: 14px;
+  left: -12px;
   display: block;
-  padding: 9px 11px 8px;
-  margin-top: -6px;
 
   .no-svg & {
     &:before {
@@ -909,8 +907,8 @@ $flags:
   }
 
   .toggle-sub-menu {
-    top: 1px;
-    left: -25px;
+    top: 14px;
+    left: -14px;
   }
 
   ul {
